# Forge

./: .env.example  .gitignore  README.md  docker-compose.yml  eslint.config.mjs  package.json  pnpm-lock.yaml
apps/api/: Dockerfile  README.md  pyproject.toml
apps/api/app/: __init__.py  main.py
apps/api/app/config/: settings.py
apps/api/app/core/: config.py  database.py  secrets_manager.py  telemetry.py
apps/api/app/db/: base_class.py
apps/api/app/dependencies/: __init__.py  auth.py  rbac.py
apps/api/app/events/: __init__.py  bus.py  handlers.py
apps/api/app/integrations/: __init__.py
apps/api/app/middleware/: logging.py  rate_limit.py  request_id.py  security.py
apps/api/app/models/: __init__.py  activity.py  ai_knowledge.py  audit_log.py  checkpoints.py  code_intelligence.py  collaboration.py  copilot.py  enums.py  git_metadata.py  github.py  invitation.py  notification.py  organization.py  project.py  repository.py  sync.py  user.py  webhook.py  workspace.py
apps/api/app/repositories/: audit_log.py  base.py  checkpoints.py  git_metadata.py  github.py  notification.py  project.py  repository.py  sync.py  user.py  workspace.py
apps/api/app/schemas/: __init__.py  notification.py  project.py  repository.py  user.py  workspace.py
apps/api/app/services/: cache.py  context_builder.py  embedding_pipeline.py  feature_flags.py  github_service.py  indexing_engine.py  invitation_service.py  org_service.py  project.py  rate_limit_service.py  repository.py  retrieval_engine.py  storage_manager.py  sync_engine.py  user.py  (+2 more)
apps/api/migrations/: env.py
(+188 files in other folders)
