[project]
name = "forge-api"
version = "0.1.0"
description = "FastAPI Backend API for Forge"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.3.0",
    "asyncpg>=0.29.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0",
    "pyjwt[crypto]>=2.9.0",
    "email-validator>=2.0.0",
    "cryptography>=43.0.0",
    "arq>=0.26.0",
    "redis>=5.0.0",
    "aiosqlite>=0.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
